@@ -735,31 +735,31 @@ public class Gen5RomHandler extends AbstractDSRomHandler {
     }
 
     @Override
-    public List<EncounterSet> getEncounters(boolean useTimeOfDay) {
+    public List<EncounterArea> getEncounters(boolean useTimeOfDay) {
         if (!loadedWildMapNames) {
             loadWildMapNames();
         }
         try {
             NARCArchive encounterNARC = readNARC(romEntry.getFile("WildPokemon"));
-            List<EncounterSet> encounters = new ArrayList<>();
+            List<EncounterArea> encounterAreas = new ArrayList<>();
             int idx = -1;
             for (byte[] entry : encounterNARC.files) {
                 idx++;
                 if (entry.length > Gen5Constants.perSeasonEncounterDataLength && useTimeOfDay) {
                     for (int i = 0; i < 4; i++) {
-                        processEncounterEntry(encounters, entry, i * Gen5Constants.perSeasonEncounterDataLength, idx);
+                        processEncounterEntry(encounterAreas, entry, i * Gen5Constants.perSeasonEncounterDataLength, idx);
                     }
                 } else {
-                    processEncounterEntry(encounters, entry, 0, idx);
+                    processEncounterEntry(encounterAreas, entry, 0, idx);
                 }
             }
-            return encounters;
+            return encounterAreas;
         } catch (IOException e) {
             throw new RandomizerIOException(e);
         }
     }
 
-    private void processEncounterEntry(List<EncounterSet> encounters, byte[] entry, int startOffset, int idx) {
+    private void processEncounterEntry(List<EncounterArea> encounterAreas, byte[] entry, int startOffset, int idx) {
 
         if (!wildMapNames.containsKey(idx)) {
             wildMapNames.put(idx, "? Unknown ?");
@@ -772,13 +772,12 @@ public class Gen5RomHandler extends AbstractDSRomHandler {
         for (int i = 0; i < 7; i++) {
             int rate = entry[startOffset + i] & 0xFF;
             if (rate != 0) {
-                List<Encounter> encs = readEncounters(entry, startOffset + offset, amounts[i]);
-                EncounterSet area = new EncounterSet();
-                area.rate = rate;
-                area.encounters = encs;
-                area.offset = idx;
-                area.displayName = mapName + " " + Gen5Constants.encounterTypeNames[i];
-                encounters.add(area);
+                List<Encounter> encounters = readEncounters(entry, startOffset + offset, amounts[i]);
+                EncounterArea area = new EncounterArea(encounters);
+                area.setRate(rate);
+                area.setOffset(idx);
+                area.setDisplayName(mapName + " " + Gen5Constants.encounterTypeNames[i]);
+                encounterAreas.add(area);
             }
             offset += amounts[i] * 4;
         }
@@ -786,41 +785,41 @@ public class Gen5RomHandler extends AbstractDSRomHandler {
     }
 
     private List<Encounter> readEncounters(byte[] data, int offset, int number) {
-        List<Encounter> encs = new ArrayList<>();
+        List<Encounter> encounters = new ArrayList<>();
         for (int i = 0; i < number; i++) {
-            Encounter enc1 = new Encounter();
+            Encounter enc = new Encounter();
             int species = readWord(data, offset + i * 4) & 0x7FF;
             int forme = readWord(data, offset + i * 4) >> 11;
             Pokemon baseForme = pokes[species];
             if (forme <= baseForme.getCosmeticForms() || forme == 30 || forme == 31) {
-                enc1.pokemon = pokes[species];
+                enc.setPokemon(pokes[species]);
             } else {
                 int speciesWithForme = Gen5Constants.getAbsolutePokeNumByBaseForme(species,forme);
                 if (speciesWithForme == 0) {
-                    enc1.pokemon = pokes[species]; // Failsafe
+                    enc.setPokemon(pokes[species]); // Failsafe
                 } else {
-                    enc1.pokemon = pokes[speciesWithForme];
+                    enc.setPokemon(pokes[speciesWithForme]);
                 }
             }
-            enc1.formeNumber = forme;
-            enc1.level = data[offset + 2 + i * 4] & 0xFF;
-            enc1.maxLevel = data[offset + 3 + i * 4] & 0xFF;
-            encs.add(enc1);
+            enc.setFormeNumber(forme);
+            enc.setLevel(data[offset + 2 + i * 4] & 0xFF);
+            enc.setMaxLevel(data[offset + 3 + i * 4] & 0xFF);
+            encounters.add(enc);
         }
-        return encs;
+        return encounters;
     }
 
     @Override
-    public void setEncounters(boolean useTimeOfDay, List<EncounterSet> encountersList) {
+    public void setEncounters(boolean useTimeOfDay, List<EncounterArea> encounterAreas) {
         try {
             NARCArchive encounterNARC = readNARC(romEntry.getFile("WildPokemon"));
-            Iterator<EncounterSet> encounters = encountersList.iterator();
+            Iterator<EncounterArea> areaIterator = encounterAreas.iterator();
             for (byte[] entry : encounterNARC.files) {
-                writeEncounterEntry(encounters, entry, 0);
+                writeEncounterEntry(areaIterator, entry, 0);
                 if (entry.length > 232) {
                     if (useTimeOfDay) {
                         for (int i = 1; i < 4; i++) {
-                            writeEncounterEntry(encounters, entry, i * 232);
+                            writeEncounterEntry(areaIterator, entry, i * 232);
                         }
                     } else {
                         // copy for other 3 seasons
@@ -1028,20 +1027,20 @@ public class Gen5RomHandler extends AbstractDSRomHandler {
         }
     }
 
-    private void writeEncounterEntry(Iterator<EncounterSet> encounters, byte[] entry, int startOffset) {
+    private void writeEncounterEntry(Iterator<EncounterArea> areaIterator, byte[] entry, int startOffset) {
         int[] amounts = Gen5Constants.encountersOfEachType;
 
         int offset = 8;
         for (int i = 0; i < 7; i++) {
             int rate = entry[startOffset + i] & 0xFF;
             if (rate != 0) {
-                EncounterSet area = encounters.next();
+                Iterator<Encounter> encounterIterator = areaIterator.next().iterator();
                 for (int j = 0; j < amounts[i]; j++) {
-                    Encounter enc = area.encounters.get(j);
-                    int speciesAndFormeData = (enc.formeNumber << 11) + enc.pokemon.getBaseNumber();
+                    Encounter enc = encounterIterator.next();
+                    int speciesAndFormeData = (enc.getFormeNumber() << 11) + enc.getPokemon().getBaseNumber();
                     writeWord(entry, startOffset + offset + j * 4, speciesAndFormeData);
-                    entry[startOffset + offset + j * 4 + 2] = (byte) enc.level;
-                    entry[startOffset + offset + j * 4 + 3] = (byte) enc.maxLevel;
+                    entry[startOffset + offset + j * 4 + 2] = (byte) enc.getLevel();
+                    entry[startOffset + offset + j * 4 + 3] = (byte) enc.getMaxLevel();
                 }
             }
             offset += amounts[i] * 4;
@@ -3877,7 +3876,7 @@ public class Gen5RomHandler extends AbstractDSRomHandler {
 
         int ability = this.getAbilityForTrainerPokemon(tp);
         if (ability == Abilities.levitate) {
-            items.removeAll(Arrays.asList(Items.shucaBerry));
+            items.removeAll(List.of(Items.shucaBerry));
         } else if (byType.get(Type.GROUND) == Effectiveness.DOUBLE || byType.get(Type.GROUND) == Effectiveness.QUADRUPLE) {
             items.add(Items.airBalloon);
         }
