@@ -1146,8 +1146,8 @@ public class Gen7RomHandler extends Abstract3DSRomHandler {
     }
 
     @Override
-    public List<EncounterSet> getEncounters(boolean useTimeOfDay) {
-        List<EncounterSet> encounters = new ArrayList<>();
+    public List<EncounterArea> getEncounters(boolean useTimeOfDay) {
+        List<EncounterArea> encounterAreas = new ArrayList<>();
         for (AreaData areaData : areaDataList) {
             if (!areaData.hasTables) {
                 continue;
@@ -1156,54 +1156,54 @@ public class Gen7RomHandler extends Abstract3DSRomHandler {
                 byte[] encounterTable = areaData.encounterTables.get(i);
                 byte[] dayTable = new byte[0x164];
                 System.arraycopy(encounterTable, 0, dayTable, 0, 0x164);
-                EncounterSet dayEncounters = readEncounterTable(dayTable);
+                EncounterArea dayArea = readEncounterTable(dayTable);
                 if (!useTimeOfDay) {
-                    dayEncounters.displayName = areaData.name + ", Table " + (i + 1);
-                    encounters.add(dayEncounters);
+                    dayArea.setDisplayName(areaData.name + ", Table " + (i + 1));
+                    encounterAreas.add(dayArea);
                 } else {
-                    dayEncounters.displayName = areaData.name + ", Table " + (i + 1) + " (Day)";
-                    encounters.add(dayEncounters);
+                    dayArea.setDisplayName(areaData.name + ", Table " + (i + 1) + " (Day)");
+                    encounterAreas.add(dayArea);
                     byte[] nightTable = new byte[0x164];
                     System.arraycopy(encounterTable, 0x164, nightTable, 0, 0x164);
-                    EncounterSet nightEncounters = readEncounterTable(nightTable);
-                    nightEncounters.displayName = areaData.name + ", Table " + (i + 1) + " (Night)";
-                    encounters.add(nightEncounters);
+                    EncounterArea nightArea = readEncounterTable(nightTable);
+                    nightArea.setDisplayName(areaData.name + ", Table " + (i + 1) + " (Night)");
+                    encounterAreas.add(nightArea);
                 }
             }
         }
-        return encounters;
+        return encounterAreas;
     }
 
-    private EncounterSet readEncounterTable(byte[] encounterTable) {
+    private EncounterArea readEncounterTable(byte[] encounterTable) {
         int minLevel = encounterTable[0];
         int maxLevel = encounterTable[1];
-        EncounterSet es = new EncounterSet();
-        es.rate = 1;
+        EncounterArea area = new EncounterArea();
+        area.setRate(1);
         for (int i = 0; i < 10; i++) {
             int offset = 0xC + (i * 4);
             int speciesAndFormeData = readWord(encounterTable, offset);
             int species = speciesAndFormeData & 0x7FF;
             int forme = speciesAndFormeData >> 11;
             if (species != 0) {
-                Encounter e = new Encounter();
-                e.pokemon = getPokemonForEncounter(species, forme);
-                e.formeNumber = forme;
-                e.level = minLevel;
-                e.maxLevel = maxLevel;
-                es.encounters.add(e);
+                Encounter enc = new Encounter();
+                enc.setPokemon(getPokemonForEncounter(species, forme));
+                enc.setFormeNumber(forme);
+                enc.setLevel(minLevel);
+                enc.setMaxLevel(maxLevel);
+                area.add(enc);
 
                 // Get all the SOS encounters for this non-SOS encounter
                 for (int j = 1; j < 8; j++) {
                     species = readWord(encounterTable, offset + (40 * j)) & 0x7FF;
                     forme = readWord(encounterTable, offset + (40 * j)) >> 11;
                     Encounter sos = new Encounter();
-                    sos.pokemon = getPokemonForEncounter(species, forme);
-                    sos.formeNumber = forme;
-                    sos.level = minLevel;
-                    sos.maxLevel = maxLevel;
-                    sos.isSOS = true;
-                    sos.sosType = SOSType.GENERIC;
-                    es.encounters.add(sos);
+                    sos.setPokemon(getPokemonForEncounter(species, forme));
+                    sos.setFormeNumber(forme);
+                    sos.setLevel(minLevel);
+                    sos.setMaxLevel(maxLevel);
+                    sos.setSOS(true);
+                    sos.setSosType(SOSType.GENERIC);
+                    area.add(sos);
                 }
             }
         }
@@ -1215,16 +1215,16 @@ public class Gen7RomHandler extends Abstract3DSRomHandler {
             int forme = readWord(encounterTable, offset) >> 11;
             if (species != 0) {
                 Encounter weatherSOS = new Encounter();
-                weatherSOS.pokemon = getPokemonForEncounter(species, forme);
-                weatherSOS.formeNumber = forme;
-                weatherSOS.level = minLevel;
-                weatherSOS.maxLevel = maxLevel;
-                weatherSOS.isSOS = true;
-                weatherSOS.sosType = getSOSTypeForIndex(i);
-                es.encounters.add(weatherSOS);
+                weatherSOS.setPokemon(getPokemonForEncounter(species, forme));
+                weatherSOS.setFormeNumber(forme);
+                weatherSOS.setLevel(minLevel);
+                weatherSOS.setMaxLevel(maxLevel);
+                weatherSOS.setSOS(true);
+                weatherSOS.setSosType(getSOSTypeForIndex(i));
+                area.add(weatherSOS);
             }
         }
-        return es;
+        return area;
     }
 
     private SOSType getSOSTypeForIndex(int index) {
@@ -1253,8 +1253,8 @@ public class Gen7RomHandler extends Abstract3DSRomHandler {
     }
 
     @Override
-    public void setEncounters(boolean useTimeOfDay, List<EncounterSet> encountersList) {
-        Iterator<EncounterSet> encounters = encountersList.iterator();
+    public void setEncounters(boolean useTimeOfDay, List<EncounterArea> encounterAreas) {
+        Iterator<EncounterArea> areaIterator = encounterAreas.iterator();
         for (AreaData areaData : areaDataList) {
             if (!areaData.hasTables) {
                 continue;
@@ -1262,16 +1262,10 @@ public class Gen7RomHandler extends Abstract3DSRomHandler {
 
             for (int i = 0; i < areaData.encounterTables.size(); i++) {
                 byte[] encounterTable = areaData.encounterTables.get(i);
-                if (useTimeOfDay) {
-                    EncounterSet dayEncounters = encounters.next();
-                    EncounterSet nightEncounters = encounters.next();
-                    writeEncounterTable(encounterTable, 0, dayEncounters.encounters);
-                    writeEncounterTable(encounterTable, 0x164, nightEncounters.encounters);
-                } else {
-                    EncounterSet dayEncounters = encounters.next();
-                    writeEncounterTable(encounterTable, 0, dayEncounters.encounters);
-                    writeEncounterTable(encounterTable, 0x164, dayEncounters.encounters);
-                }
+                EncounterArea dayArea = areaIterator.next();
+                writeEncounterTable(encounterTable, 0, dayArea);
+                EncounterArea nightArea = useTimeOfDay ? areaIterator.next() : dayArea;
+                writeEncounterTable(encounterTable, 0x164, nightArea);
             }
         }
 
@@ -1284,21 +1278,21 @@ public class Gen7RomHandler extends Abstract3DSRomHandler {
     }
 
     private void writeEncounterTable(byte[] encounterTable, int offset, List<Encounter> encounters) {
-        Iterator<Encounter> encounter = encounters.iterator();
+        Iterator<Encounter> encounterIterator = encounters.iterator();
         Encounter firstEncounter = encounters.get(0);
-        encounterTable[offset] = (byte) firstEncounter.level;
-        encounterTable[offset + 1] = (byte) firstEncounter.maxLevel;
+        encounterTable[offset] = (byte) firstEncounter.getLevel();
+        encounterTable[offset + 1] = (byte) firstEncounter.getMaxLevel();
         int numberOfEncounterSlots = encounters.size() / 8;
         for (int i = 0; i < numberOfEncounterSlots; i++) {
             int currentOffset = offset + 0xC + (i * 4);
-            Encounter enc = encounter.next();
-            int speciesAndFormeData = (enc.formeNumber << 11) + enc.pokemon.getBaseNumber();
+            Encounter enc = encounterIterator.next();
+            int speciesAndFormeData = (enc.getFormeNumber() << 11) + enc.getPokemon().getBaseNumber();
             writeWord(encounterTable, currentOffset, speciesAndFormeData);
 
             // SOS encounters for this encounter
             for (int j = 1; j < 8; j++) {
-                Encounter sosEncounter = encounter.next();
-                speciesAndFormeData = (sosEncounter.formeNumber << 11) + sosEncounter.pokemon.getBaseNumber();
+                Encounter sosEncounter = encounterIterator.next();
+                speciesAndFormeData = (sosEncounter.getFormeNumber() << 11) + sosEncounter.getPokemon().getBaseNumber();
                 writeWord(encounterTable, currentOffset + (40 * j), speciesAndFormeData);
             }
         }
@@ -1307,8 +1301,8 @@ public class Gen7RomHandler extends Abstract3DSRomHandler {
         if (encounters.size() != numberOfEncounterSlots * 8) {
             for (int i = 0; i < 6; i++) {
                 int currentOffset = offset + 0x14C + (i * 4);
-                Encounter weatherSOSEncounter = encounter.next();
-                int speciesAndFormeData = (weatherSOSEncounter.formeNumber << 11) + weatherSOSEncounter.pokemon.getBaseNumber();
+                Encounter weatherSOSEncounter = encounterIterator.next();
+                int speciesAndFormeData = (weatherSOSEncounter.getFormeNumber() << 11) + weatherSOSEncounter.getPokemon().getBaseNumber();
                 writeWord(encounterTable, currentOffset, speciesAndFormeData);
             }
         }
@@ -3609,7 +3603,7 @@ public class Gen7RomHandler extends Abstract3DSRomHandler {
 
         int ability = this.getAbilityForTrainerPokemon(tp);
         if (ability == Abilities.levitate) {
-            items.removeAll(Arrays.asList(Items.shucaBerry));
+            items.removeAll(List.of(Items.shucaBerry));
         } else if (byType.get(Type.GROUND) == Effectiveness.DOUBLE || byType.get(Type.GROUND) == Effectiveness.QUADRUPLE) {
             items.add(Items.airBalloon);
         }
